# ndk-rust-demo-piet

./: Cargo.toml
src/: lib.rs
